5-day forecast functional

--- a/index.html
+++ b/index.html
@@ -15,47 +15,50 @@
     <title>Weather Dashboard</title>
 
   </head>
-  <body>
-    <div class="container-fluid h1 border text-center p-5" style="width: 100%;">
-        Weather Dashboard
-    </div>
-    <!-- Card -->
-    <div class="container-fluid bg-light py-5 border" id="background">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="card bg-white py-4 col-md-6 col-sm-8">
-                <div class="h2 text-dark text-center" id="time">-
-                <hr>
+  <body class="container-fluid">
+
+    <header class="row bg-dark text-white p-4">
+        <div class="col-12"><h1 class="text-center">Weather Dashboard</h1></div> 
+    </header>
+
+    <main class="row">
+
+        <aside class="col-sm-4 p-4">
+            <h4 class="py-3">
+                Search for a City:
+            </h4>
+            <form action="input-group" id="search">
+                <div class="input-group-prepend">
+                    <input type="text" class="form-control" placeholder="City" id="searchEntry">
+                    <button class="btn btn-primary mx-2" type="submit" id="searchBtn">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
-                <div class="h2 text-dark text-center" id="question">-
-                <hr>
+            </form>
+            <div class="btn-block btn-group-vertical" id="history"></div>
+        </aside>
+
+        <div class="col-sm-8 col-lg-9">
+            <section class="d-block card" id="today">
+                <h2 id="currentCity"></h2>
+                <p id="temp"></p>
+                <p id="humid"></p>
+                <p id="wind"></p>
+                <p id="uv"></p>
+            </section>
+            <section class="mt-4" id="five-day">
+                <h3>5-Day Forecast</h3>
+                <div class="row mt-5">
+                    <div class="card p-3 mx-5" id="0"></div>
+                    <div class="card p-3 mx-5" id="1"></div>
+                    <div class="card p-3 mx-5" id="2"></div>
+                    <div class="card p-3 mx-5" id="3"></div>
+                    <div class="card p-3 mx-5" id="4"></div>
                 </div>
-                <div class="card">
-                    <div class="border h2 rounded-2 card-body text-center text-secondary p-5" id="answers">
-                        <ul class="list-group list-group-flush">
-                            <a class="list-group-item py-5 answer-choice" id="answer0" href="#">-</a>
-                            <a class="list-group-item py-5 answer-choice" id="answer1" href="#">-</a>
-                            <a class="list-group-item py-5 answer-choice" id="answer2" href="#">-</a>
-                            <a class="list-group-item py-5 answer-choice" id="answer3" href="#">-</a>
-                        </ul>
-                    </div>
-                </div>
-                <hr>
-                <a class="h1 text-dark text-center" id="start" href="#">
-                    -
-                </a>
-                <hr>
-                <div class="h1 text-center" id="result">
-                    -
-                </div>
-                <hr>
-                <a class="h3 text-center" id="leaderboard-link" href="highscores.html">
-                    -
-                </a>
-            </div>
-            <div class="col-"></div>    
+            </section>
         </div>
-    </div>
+
+    </main>    
 
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
