current weather functionality working

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         </aside>
 
         <div class="col-sm-8 col-lg-9">
-            <section class="d-block card" id="today">
+            <section class="d-block card text-center" id="today">
                 <h2 id="currentCity"></h2>
+                <div id="image"></div>
                 <p id="temp"></p>
                 <p id="humid"></p>
                 <p id="wind"></p>
@@ -49,11 +50,11 @@
             <section class="mt-4" id="five-day">
                 <h3>5-Day Forecast</h3>
                 <div class="row mt-5">
-                    <div class="card p-3 mx-5" id="0"></div>
-                    <div class="card p-3 mx-5" id="1"></div>
-                    <div class="card p-3 mx-5" id="2"></div>
-                    <div class="card p-3 mx-5" id="3"></div>
-                    <div class="card p-3 mx-5" id="4"></div>
+                    <div class="card p-3 mx-5 my-1" id="0"></div>
+                    <div class="card p-3 mx-5 my-1" id="1"></div>
+                    <div class="card p-3 mx-5 my-1" id="2"></div>
+                    <div class="card p-3 mx-5 my-1" id="3"></div>
+                    <div class="card p-3 mx-5 my-1" id="4"></div>
                 </div>
             </section>
         </div>
